; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_date.c_tm2timetz.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_date.c_tm2timetz.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pg_tm = type { i32, i32, i32 }
%struct.TYPE_3__ = type { i32, i64 }

@MINS_PER_HOUR = common dso_local global i32 0, align 4
@SECS_PER_MINUTE = common dso_local global i32 0, align 4
@USECS_PER_SEC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tm2timetz(%struct.pg_tm* %0, i64 %1, i32 %2, %struct.TYPE_3__* %3) #0 {
  %5 = alloca %struct.pg_tm*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_3__*, align 8
  store %struct.pg_tm* %0, %struct.pg_tm** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  store %struct.TYPE_3__* %3, %struct.TYPE_3__** %8, align 8
  %9 = load %struct.pg_tm*, %struct.pg_tm** %5, align 8
  %10 = getelementptr inbounds %struct.pg_tm, %struct.pg_tm* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @MINS_PER_HOUR, align 4
  %13 = mul nsw i32 %11, %12
  %14 = load %struct.pg_tm*, %struct.pg_tm** %5, align 8
  %15 = getelementptr inbounds %struct.pg_tm, %struct.pg_tm* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  %17 = add nsw i32 %13, %16
  %18 = load i32, i32* @SECS_PER_MINUTE, align 4
  %19 = mul nsw i32 %17, %18
  %20 = load %struct.pg_tm*, %struct.pg_tm** %5, align 8
  %21 = getelementptr inbounds %struct.pg_tm, %struct.pg_tm* %20, i32 0, i32 2
  %22 = load i32, i32* %21, align 4
  %23 = add nsw i32 %19, %22
  %24 = load i32, i32* @USECS_PER_SEC, align 4
  %25 = mul nsw i32 %23, %24
  %26 = sext i32 %25 to i64
  %27 = load i64, i64* %6, align 8
  %28 = add nsw i64 %26, %27
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 1
  store i64 %28, i64* %30, align 8
  %31 = load i32, i32* %7, align 4
  %32 = load %struct.TYPE_3__*, %struct.TYPE_3__** %8, align 8
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i32 0, i32 0
  store i32 %31, i32* %33, align 8
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
